--- a/guitarcase.html
+++ b/guitarcase.html
@@ -62,15 +62,15 @@
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 font-white left">
+                    <div class="col-md-7 col-sm-7 font-white left">
                         <h1>Guitar Case <span class="font-blue">|</span> 2011</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
-                        </div> 
-                        <h3 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings.</h3>
+                        </div>   
+                        <h3 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings. The design incorporates an innovative recessed handle and a prop for the neck when in the case to allow for easy tuning and string changes.</h3>
                     </div>
                 </div>  
             </div>
@@ -81,6 +81,17 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-xs-12 font-blue left">
+                        <h1>Process</h1>
+                        <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div>  
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/guitarbrainstorm960x540.jpg">
@@ -130,7 +141,20 @@
         </div>
     </div>
 
-    <!-- Work -->
+<!-- Reflection -->
+    <div class="outer-fit bg-green" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image top center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 col-sm-7 font-white left">
+                        <h3 class="font-white">The design of this guitar case was an incredible learning experience. I was given a great deal of responsibility, and there were some mistakes made along the way. One major mixup almost derailed the entire project, but luckily we were able to recover from the error. The project is currently up in the air.</h3>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>  
+
+<!-- Work -->
     <div class="outer-fit bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
@@ -153,7 +177,15 @@
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>  
+                </div>
+                <div class="row padded-top">
+                    <div class="col-md-12 text-right">
+                        <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
+                        <input type="button" value="Clifford | 2013" class="btn btn-blue" onclick="location.href='bootcamp.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div> 
+                </div>   
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
@@ -164,7 +196,7 @@
                 </div>           
             </div>
         </div>
-    </div>
+    </div>    
 
 <!-- Contact -->
     <div class="outer-full-page bg-green" id="Contact">
@@ -179,7 +211,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call if to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
             <div class="row">
