--- a/loungechair.html
+++ b/loungechair.html
@@ -62,7 +62,7 @@
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 font-white left">
+                    <div class="col-md-7 col-sm-7 font-white left">
                         <h1>Lounge Chair <span class="font-blue">|</span> 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
@@ -81,6 +81,17 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-xs-12 font-blue left">
+                        <h1>Process</h1>
+                        <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div>  
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/chairpage13.jpg">
@@ -152,6 +163,19 @@
         </div>
     </div>
 
+    <!-- Reflection -->
+    <div class="outer-fit bg-green" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image top center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 col-sm-7 font-white left">
+                        <h3 class="font-white">The chair that came out of this project is something that I'm very proud of. The proportions of the final full-size scale prototype, however, were still incorrect. I am currently pursuing redesign of the chair's proportions and looking into alternate modes of manufacturing.</h3>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>  
+
     <!-- Work -->
     <div class="outer-fit bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
@@ -175,7 +199,15 @@
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>  
+                </div>
+                <div class="row padded-top">
+                    <div class="col-md-12 text-right">
+                        <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
+                        <input type="button" value="Clifford | 2013" class="btn btn-blue" onclick="location.href='bootcamp.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div> 
+                </div>   
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
@@ -201,7 +233,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call if to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
             <div class="row">
