--- a/speaker.html
+++ b/speaker.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-    <!-- Fixed Top Navigation -->
+<!-- Fixed Top Navigation -->
     <a class="sr-only" href="#content">Skip to main content</a>
     <header class="navbar navbar-default navbar-fixed-top bs-docs-nav" role="banner">
         <div class="container">
@@ -57,12 +57,12 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     
-    <!-- Project Outline -->
+<!-- Project Outline -->
     <div class="outer-fit bg-green" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 font-white left">
+                    <div class="col-md-7 col-sm-7 font-white left">
                         <h1>Bluetooth Speaker <span class="font-blue">|</span> 2013</h1>
                         </div>
                          <div class="outer-line-top">  
@@ -71,7 +71,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>
-                        <div class="col-md-6 font-white left"> 
+                        <div class="col-md-7 col-sm-7 font-white left"> 
                         <h3 class="font-white">A wireless speaker I designed as part of the Introduction to Industrial Design Methods course at Northwestern. Currently in the process of getting a prototype built.</h3>
                     </div>
                 </div>  
@@ -79,10 +79,21 @@
         </div>
     </div>
 
-    <!-- Process -->
+<!-- Process -->
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-xs-12 font-blue left">
+                        <h1>Process</h1>
+                        <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div>  
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/speakerpage14.jpg">
@@ -132,7 +143,20 @@
         </div>
     </div>
 
-    <!-- Work -->
+<!-- Reflection -->
+    <div class="outer-fit bg-green" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image top center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7 col-sm-7 font-white left">
+                        <h3 class="font-white">I am excited about the design that came out of this project. I am currently pursuing further development of the design direction and a potential full-size prototype.</h3>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>  
+
+<!-- Work -->
     <div class="outer-fit bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
@@ -155,7 +179,15 @@
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>  
+                </div>
+                <div class="row padded-top">
+                    <div class="col-md-12 text-right">
+                        <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
+                        <input type="button" value="Clifford | 2013" class="btn btn-blue" onclick="location.href='bootcamp.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div> 
+                </div>   
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
                         <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
@@ -168,7 +200,7 @@
         </div>
     </div>
 
-        <!-- Contact -->
+<!-- Contact -->
     <div class="outer-full-page bg-green" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
@@ -181,7 +213,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call if to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
             <div class="row">
