--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <div class="inner-full-page about-image middle">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-5 font-white">
-                        <h1>Brandon Williams:<br><span class="font-light">Engineer &amp; Designer</span></h1>
+                    <div class="col-md-8 font-white">
+                        <h1 class="title">Brandon Williams:<br><span class="font-light">Engineer &amp; Designer</span></h1>
                     </div>
                 </div> 
             </div>
@@ -229,6 +229,14 @@
                         </div>
                         <div class="pad-space">
                     </div> 
+                </div>
+                <div class="row padded-top">
+                    <div class="col-md-12 text-right">
+                        <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
+                        <input type="button" value="Clifford | 2013" class="btn btn-blue" onclick="location.href='bootcamp.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div> 
                 </div> 
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
@@ -256,7 +264,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call if to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
                     </div>
                 </div>
             <div class="row">
