--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="inner-fit philosophy-image top">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 font-blue">
+                    <div class="col-md-7 col-sm-7 font-blue">
                         <h1>Philosophy</h1>
                          <div class="outer-line-top">  
                         </div>  
