--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
-                        <img class="img-responsive" src="img/prototyping2.jpg">
+                        <img class="img-responsive" src="img/prototyping2.JPG">
                         <h2>Protoype</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -151,7 +151,7 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
-                        <img class="img-responsive" src="img/usertesting.png">
+                        <img class="img-responsive" src="img/usertesting.PNG">
                         <h2>Test</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -166,7 +166,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-blue">
-                        <img class="img-responsive" src="img/iteration.jpg">
+                        <img class="img-responsive" src="img/iteration.JPG">
                         <h2>Iterate</h2>
                             <div class="outer-small-line-top">  
                             </div>  
