--- a/speaker.html
+++ b/speaker.html
@@ -58,21 +58,20 @@
         <![endif]-->
     
 <!-- Project Outline -->
-    <div class="outer-fit bg-green" id="Philosophy">
+    <div class="outer-fit bg-blue" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h1>Bluetooth Speaker <span class="font-blue">|</span> 2013</h1>
-                        </div>
-                         <div class="outer-line-top">  
+                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-ofset-2 font-white left">
+                        <h1 class="headline">speaker <span class="font-green">|</span> 2013</h1>
+                        <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
                         </div>
-                        <div class="col-md-7 col-sm-7 font-white left"> 
-                        <h3 class="font-white">A wireless speaker I designed as part of the Introduction to Industrial Design Methods course at Northwestern. Currently in the process of getting a prototype built.</h3>
+                        <h2 class="font-white">A wireless speaker I designed as part of the Introduction to Industrial Design Methods course at Northwestern. I wanted to design a bluetooth speaker with a simple, iconic profile made of high quality materials. Currently working on building a prototype.</h2>
+                        </div>
                     </div>
                 </div>  
             </div>
@@ -83,9 +82,9 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-xs-12 font-blue left">
-                        <h1>Process</h1>
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 col-xs-12 font-green left">
+                        <h1 class="headline">process</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
@@ -94,7 +93,7 @@
                         </div>  
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/speakerpage14.jpg">
                     </div>
@@ -102,7 +101,7 @@
                         <img class="img-responsive" src="img/speakerpage16.jpg">
                     </div>  
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/speakerpage13.jpg">
                     </div>
@@ -110,7 +109,7 @@
                         <img class="img-responsive" src="img/speakerpage19.jpg">
                     </div>  
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/speakerpage12.jpg">
                     </div>
@@ -118,7 +117,7 @@
                         <img class="img-responsive" src="img/speakerpage10.jpg">
                     </div>  
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/speakerpage20.jpg">
                     </div>
@@ -126,7 +125,7 @@
                         <img class="img-responsive" src="img/speakerpage6.jpg">
                     </div>  
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/speakermodel1.jpg">
                     </div>
@@ -144,12 +143,12 @@
     </div>
 
 <!-- Reflection -->
-    <div class="outer-fit bg-green" id="Philosophy">
+    <div class="outer-fit bg-blue">
         <div class="inner-fit-reflection philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h3 class="font-white">I am excited about the design that came out of this project. I am currently pursuing further development of the design direction and a potential full-size prototype.</h3>
+                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 font-white left">
+                        <h2 class="font-white">I am excited about the design that came out of this project. I am currently pursuing further development of the design and will update the project as things progress.</h2>
                     </div>
                 </div>  
             </div>
@@ -160,60 +159,68 @@
     <div class="outer-fit bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 font-blue left">
-                        <h1>Other Work</h1>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-6 font-green left">
+                        <h1 class="headline">other work</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>A collection of recent projects from school, work, and personal passions.</h3></span>
+                        <span class="font-blue"><h2>A collection of recent projects from school and work.</h2></span>
                     </div>
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
-                        <input type="button" value="Guitar Case | 2011" class="btn btn-blue-gray" onclick="location.href='guitarcase.html';">
+                        <input type="button" value="guitar case | 2012" class="btn btn-blue-work" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div>
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
-                        <input type="button" value="Clifford | 2013" class="btn btn-blue" onclick="location.href='bootcamp.html';">
+                        <input type="button" value="clifford | 2013" class="btn btn-blue-work" onclick="location.href='bootcamp.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
                 </div>   
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-blue-gray" onclick="location.href='loungechair.html';">
+                        <input type="button" value="lounge chair | 2013" class="btn btn-blue-work" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>           
+                </div>
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <a href="shoes.html"><img class="img-responsive" src="img/shoepagehome.jpg"></a>
+                        <input type="button" value="shoes | 2013" class="btn btn-blue-work" onclick="location.href='shoes.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>             
             </div>
         </div>
     </div>
 
-<!-- Contact -->
+ <!-- Contact -->
     <div class="outer-full-page bg-green" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 font-white left">
-                        <h1>Contact</h1>
+                        <h1 class="headline">contact</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-blue">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
                     </div>
                 </div>
             <div class="row">
@@ -251,13 +258,13 @@
                 </form> 
         </div> 
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h3><span class="font-normal font-blue">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
+                    <div class="col-md-12">
+                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
                     </div>
                 </div>
             </div>   
         </div>
-    </div> 
+    </div>
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
