--- a/bootcamp.html
+++ b/bootcamp.html
@@ -58,19 +58,19 @@
         <![endif]-->
     
     <!-- Project Outline -->
-    <div class="outer-fit bg-green" id="Philosophy">
+    <div class="outer-fit bg-blue" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h1>Clifford <span class="font-blue">|</span> 2013</h1>
+                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 font-white left">
+                        <h1 class="headline">clifford <span class="font-green">|</span> 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
-                            <div class="inner-line-dark">
+                            <div class="inner-line-blue">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <h3 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. A three-week project based on the prompt "Kinetic Art" and a $100 budget. The bootcamp project is the first project completed by all students in Northwestern University's Engineering Design Innovation Master's Program.</h3>
+                        <h2 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. A three-week project based on the prompt "Kinetic Art" and a $100 budget. The first project completed for Northwestern University's Engineering Design Innovation Master's Program.</h2>
                     </div>
                 </div>  
             </div>
@@ -81,9 +81,9 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit top center">
             <div class="container font-blue">
-                <div class="row">
-                    <div class="col-md-6 col-xs-12 font-blue left">
-                        <h1>Process</h1>
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 col-xs-12 font-green left">
+                        <h1 class="headline">process</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
@@ -92,12 +92,12 @@
                         </div>  
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/initialcliffordconcept.jpg">
                     </div>
                 </div>
-                <div class="row padded-bottom-25">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/cliffordconcept.jpg">
                     </div>    
@@ -106,7 +106,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/foamcoretest1.jpg">
                     </div>
@@ -114,7 +114,7 @@
                         <img class="img-responsive" src="img/chordclamp.jpg">
                     </div>  
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/finalclifforddrawing.jpg">
                     </div>
@@ -127,14 +127,14 @@
                         <img class="img-responsive" src="img/fullwoodtest.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="video-container">
-                            <iframe src="http://player.vimeo.com/video/85860814?color=26936c&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <iframe src="http://player.vimeo.com/video/85860814?color=27AE60&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>      
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/fullwoodtest2.jpg">
                     </div>
@@ -142,7 +142,7 @@
                         <img class="img-responsive" src="img/shopwork.jpg">
                     </div>
                 </div> 
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/finalclifford.jpg">
                     </div>
@@ -158,7 +158,7 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="video-container">
-                            <iframe src="http://player.vimeo.com/video/85860812?color=26936c&portrait=0" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <iframe src="http://player.vimeo.com/video/85860812?color=27AE60&portrait=0" width="960" height="540" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>             
@@ -166,77 +166,85 @@
         </div>
     </div>
 
-    <!-- Work -->
-    <div class="outer-fit bg-gray" id="Work">
-        <div class="inner-fit philosophy-image top center">
+    <!-- Reflection -->
+    <div class="outer-fit bg-blue" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 font-blue left">
-                        <h1>Other Work</h1>
+                    <div class="col-md-6 col-md-offset-3 col-sm-offset-3 col-sm-6 font-white left">
+                        <h2 class="font-white">Clifford was a lot of fun to work on. I was able to build it out of recycled materials. All of the parts were leftovers in the studio. I originally planned on Clifford having the ability to play six chords, but ended with it only playing two. Clifford has been retired but the project could be pursued again in the future.</h2>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>  
+
+    <!-- Work -->
+    <div class="outer-fit bg-white" id="Work">
+        <div class="inner-fit philosophy-image top center">
+            <div class="container">
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 font-green left">
+                        <h1 class="headline">other work</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>A collection of recent projects from school, work, and personal passions.</h3></span>
+                        <span class="font-blue"><h2>A collection of recent projects from school and work.</h2></span>
                     </div>
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
-                        <input type="button" value="Guitar Case | 2011" class="btn btn-blue" onclick="location.href='guitarcase.html';">
+                        <input type="button" value="guitar case | 2012" class="btn btn-blue-work" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-blue-gray" onclick="location.href='loungechair.html';">
+                        <input type="button" value="lounge chair | 2013" class="btn btn-blue-work" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div>
                 </div>  
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
-                        <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-blue-gray" onclick="location.href='speaker.html';">
+                        <input type="button" value="speaker | 2013" class="btn btn-blue-work" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>         
+                </div> 
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="shoes.html"><img class="img-responsive" src="img/shoepagehome.jpg"></a>
+                        <input type="button" value="shoes | 2013" class="btn btn-blue-work" onclick="location.href='shoes.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>          
             </div>
         </div>
     </div>
 
-<!-- Reflection -->
-    <div class="outer-fit bg-green" id="Philosophy">
-        <div class="inner-fit-reflection philosophy-image top center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h3 class="font-white">Clifford was a lot of fun to work on. I was able to build it out of recycled materials. All of the parts were leftovers in the studio. I originally planned on Clifford having the ability to play six chords, but ended with it only playing two. Clifford has been retired but the project could be pursued again in the future.</h3>
-                    </div>
-                </div>  
-            </div>
-        </div>
-    </div>    
-
-<!-- Contact -->
+ <!-- Contact -->
     <div class="outer-full-page bg-green" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 font-white left">
-                        <h1>Contact</h1>
+                        <h1 class="headline">contact</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-blue">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
                     </div>
                 </div>
             <div class="row">
@@ -274,14 +282,13 @@
                 </form> 
         </div> 
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h3><span class="font-normal font-blue">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
+                    <div class="col-md-12">
+                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
                     </div>
                 </div>
             </div>   
         </div>
-    </div>   
-
+    </div>
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
