--- a/guitarcase.html
+++ b/guitarcase.html
@@ -58,19 +58,19 @@
         <![endif]-->
     
     <!-- Project Outline -->
-    <div class="outer-fit bg-green" id="Philosophy">
+    <div class="outer-fit bg-blue" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h1>Guitar Case <span class="font-blue">|</span> 2011</h1>
+                    <div class="col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3 font-white left">
+                        <h1 class="headline">guitar case <span class="font-green">|</span> 2012</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h3 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings. The design incorporates an innovative recessed handle and a prop for the neck when in the case to allow for easy tuning and string changes.</h3>
+                        <h2 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings. The design incorporates an innovative recessed handle.</h2>
                     </div>
                 </div>  
             </div>
@@ -81,9 +81,9 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-xs-12 font-blue left">
-                        <h1>Process</h1>
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 col-xs-12 font-green left">
+                        <h1 class="headline">process</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
@@ -92,7 +92,7 @@
                         </div>  
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/guitarbrainstorm960x540.jpg">
                     </div>    
@@ -100,7 +100,7 @@
                         <img class="img-responsive" src="img/tuningstationmockup960x540.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/tuningstationsketch480x540.jpg">
                     </div>
@@ -108,12 +108,12 @@
                         <img class="img-responsive" src="img/casepremodel480x540.jpg">
                     </div>  
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/finalcasemodel960x540.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/gibsonlogocloseup960x540.jpg">
                     </div>
@@ -121,7 +121,7 @@
                         <img class="img-responsive" src="img/foamrendering960x540.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/closeuprecessedhandle960x540.jpg">
                     </div>
@@ -129,6 +129,14 @@
                         <img class="img-responsive" src="img/guitarmold960x540.jpg">
                     </div>
                 </div> 
+                <div class="row padded-bottom-35">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/foamcutout.jpg">
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <img class="img-responsive" src="img/tuningstation.jpg">
+                    </div>
+                </div>  
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/finalcaseproto960x540.jpg">
@@ -142,12 +150,12 @@
     </div>
 
 <!-- Reflection -->
-    <div class="outer-fit bg-green" id="Philosophy">
+    <div class="outer-fit bg-blue" id="Philosophy">
         <div class="inner-fit-reflection philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h3 class="font-white">The design of this guitar case was an incredible learning experience. I was given a great deal of responsibility, and there were some mistakes made along the way. One major mixup almost derailed the entire project, but luckily we were able to recover from the error. The project is currently up in the air.</h3>
+                    <div class="col-md-8 col-md-offset-2 col-sm-offset-2 col-sm-8 font-white left">
+                        <h2 class="font-white">The design of this guitar case was an incredible learning experience. I was given a great deal of responsibility and there were some mistakes made along the way. The project is currently on hold.</h2>
                     </div>
                 </div>  
             </div>
@@ -155,63 +163,71 @@
     </div>  
 
 <!-- Work -->
-    <div class="outer-fit bg-gray" id="Work">
+    <div class="outer-fit bg-white" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 font-blue left">
-                        <h1>Other Work</h1>
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 font-green left">
+                        <h1>other work</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>A collection of recent projects from school, work, and personal passions.</h3></span>
+                        <span class="font-blue font-bold"><h2>A collection of recent projects from school and work.</h2></span>
                     </div>
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-blue-gray" onclick="location.href='loungechair.html';">
+                        <input type="button" value="lounge chair | 2013" class="btn btn-blue-work" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div>
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
-                        <input type="button" value="Clifford | 2013" class="btn btn-blue" onclick="location.href='bootcamp.html';">
+                        <input type="button" value="clifford | 2013" class="btn btn-blue-work" onclick="location.href='bootcamp.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
                 </div>   
-                <div class="row padded-top">
+                <div class="row pa">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
-                        <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-blue-gray" onclick="location.href='speaker.html';">
+                        <input type="button" value="bluetooth speaker | 2013" class="btn btn-blue-work" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>           
+                </div> 
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="shoes.html"><img class="img-responsive" src="img/shoepagehome.jpg"></a>
+                        <input type="button" value="shoes | 2013" class="btn btn-blue-work" onclick="location.href='shoes.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>            
             </div>
         </div>
     </div>    
 
-<!-- Contact -->
+ <!-- Contact -->
     <div class="outer-full-page bg-green" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 font-white left">
-                        <h1>Contact</h1>
+                        <h1 class="headline">contact</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-blue">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
                     </div>
                 </div>
             <div class="row">
@@ -249,13 +265,13 @@
                 </form> 
         </div> 
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h3><span class="font-normal font-blue">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
+                    <div class="col-md-12">
+                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
                     </div>
                 </div>
             </div>   
         </div>
-    </div>   
+    </div>
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
