--- a/loungechair.html
+++ b/loungechair.html
@@ -58,19 +58,19 @@
         <![endif]-->
     
     <!-- Project Outline -->
-    <div class="outer-fit bg-green" id="Philosophy">
+    <div class="outer-fit bg-blue" id="Philosophy">
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h1>Lounge Chair <span class="font-blue">|</span> 2013</h1>
+                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 font-white left">
+                        <h1 class="headline">lounge chair <span class="font-green">|</span> 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <h3 class="font-white">I have always loved furniture and had the opportunity to design a lounge chair as part of the Introduction to Industrial Design Methods course at Northwestern. I enjoyed taking my design through several steps of my process: sketching, scale models, solid modeling, and a full size proportion model.</h3>
+                        <h2 class="font-white">I have always loved furniture and had the opportunity to design a lounge chair as part of the Introduction to Industrial Design Methods course at Northwestern. I enjoyed taking my design through several steps of my process: sketching, scale models, solid modeling, and a full size proportion model.</h2>
                     </div>
                 </div>  
             </div>
@@ -81,9 +81,9 @@
     <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-xs-12 font-blue left">
-                        <h1>Process</h1>
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 col-xs-12 font-green left">
+                        <h1 class="headline">process</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
@@ -92,12 +92,12 @@
                         </div>  
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/chairpage13.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/chairpage14.jpg">
                     </div>
@@ -105,22 +105,22 @@
                         <img class="img-responsive" src="img/chairpage16.jpg">
                     </div>  
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/chairpage17.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/chairpage18.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/chairpage20.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/chairpage21.jpg">
                     </div>
@@ -128,12 +128,12 @@
                         <img class="img-responsive" src="img/chairpage23.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/chairpage30.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/chairmodel1.jpg">
                     </div>
@@ -141,7 +141,7 @@
                         <img class="img-responsive" src="img/chairmodel2.jpg">
                     </div>
                 </div> 
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <img class="img-responsive" src="img/chairmodel3.jpg">
                     </div>
@@ -149,7 +149,7 @@
                         <img class="img-responsive" src="img/chairmodel4.jpg">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <img class="img-responsive" src="img/Side With Plug.jpg">
                     </div>
@@ -164,12 +164,12 @@
     </div>
 
     <!-- Reflection -->
-    <div class="outer-fit bg-green" id="Philosophy">
+    <div class="outer-fit bg-blue" id="Philosophy">
         <div class="inner-fit-reflection philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7 col-sm-7 font-white left">
-                        <h3 class="font-white">The chair that came out of this project is something that I'm very proud of. The proportions of the final full-size scale prototype, however, were still incorrect. I am currently pursuing redesign of the chair's proportions and looking into alternate modes of manufacturing.</h3>
+                    <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-8 font-white left">
+                        <h2 class="font-white">The chair that came out of this project is something that I'm very proud of. The proportions of the final full-size scale prototype, however, were still incorrect. I am currently pursuing redesign of the chair's proportions and looking into alternate modes of manufacturing.</h2>
                     </div>
                 </div>  
             </div>
@@ -180,60 +180,68 @@
     <div class="outer-fit bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-6 font-blue left">
-                        <h1>Other Work</h1>
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 font-green left">
+                        <h1 class="headline">other work</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>A collection of recent projects from school, work, and personal passions.</h3></span>
+                        <span class="font-blue"><h2>A collection of recent projects from school and work.</h2></span>
                     </div>
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
-                        <input type="button" value="Guitar Case | 2011" class="btn btn-blue-gray" onclick="location.href='guitarcase.html';">
+                        <input type="button" value="guitar case | 2012" class="btn btn-blue-work" onclick="location.href='guitarcase.html';">
                         </div>
                         <div class="pad-space">
                     </div>
                 </div>
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
-                        <input type="button" value="Clifford | 2013" class="btn btn-blue" onclick="location.href='bootcamp.html';">
+                        <input type="button" value="clifford | 2013" class="btn btn-blue-work" onclick="location.href='bootcamp.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
                 </div>   
-                <div class="row padded-top">
+                <div class="row padded-bottom-35">
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
-                        <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-blue-gray" onclick="location.href='speaker.html';">
+                        <input type="button" value="speaker | 2013" class="btn btn-blue-work" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
                     </div>
-                </div>           
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="shoes.html"><img class="img-responsive" src="img/shoepagehome.jpg"></a>
+                        <input type="button" value="shoes | 2013" class="btn btn-blue-work" onclick="location.href='shoes.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>            
             </div>
         </div>
     </div>
 
-   <!-- Contact -->
+    <!-- Contact -->
     <div class="outer-full-page bg-green" id="Contact">
         <div class="inner-full-page middle center">
             <div class="container">
                 <div class="row padded-bottom">
                     <div class="col-md-6 col-md-offset-3 font-white left">
-                        <h1>Contact</h1>
+                        <h1 class="headline">contact</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-blue">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h3></span>
+                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
                     </div>
                 </div>
             <div class="row">
@@ -271,14 +279,13 @@
                 </form> 
         </div> 
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h3><span class="font-normal font-blue">email. brandonwilliams.nu@gmail.com | phone. 574-305-1468</span></h3>
+                    <div class="col-md-12">
+                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
                     </div>
                 </div>
             </div>   
         </div>
-    </div>   
-
+    </div>
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
