--- a/shoes.html
+++ b/shoes.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/form.css">
         <link rel="stylesheet" href="css/brandonkwilliams.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -58,18 +59,18 @@
     
     <!-- Project Outline -->
     <div class="outer-fit bg-blue" id="Philosophy">
-        <div class="inner-fit philosophy-image top center">
+        <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-white">
-                        <h1>Dress Shoe | 2013</h1>
+                    <div class="col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3 font-white left">
+                        <h1 class="headline">shoes <span class="font-green">|</span> 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
-                        </div> 
-                        <h3 class="font-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3>
+                        </div>   
+                        <h2 class="font-white">Shoes that I designed as part of the Introduction to Industrial Design Course at Northwestern. I was inspired by the Cole Haan Lunargrand shoes that combine a dress shoe upper with an athletic sole.</h2>
                     </div>
                 </div>  
             </div>
@@ -81,143 +82,179 @@
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom-25">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-full">
-                        </div>
-                    </div>
-                </div>
-                <div class="row padded-bottom-25">    
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
-                        <div class="filler-fourth-landscape">
-                        </div> 
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-half-portrait">
-                        </div>
-                    </div>  
-                </div>
-                <div class="row padded-bottom-25">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="filler-half-landscape">
-                        </div>
-                    </div>
-                </div>
-                <div class="row padded-bottom-25">
-                    <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="filler-fourth-landscape">
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-eighth-landscape">
-                        </div>
-                        <div class="filler-eighth-landscape">
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6">
-                        <div class="filler-fourth-portrait">
-                        </div>
-                    </div>
-                </div>            
-            </div>
-        </div>
-    </div>
-
-    <!-- Work -->
-    <div class="outer-fit bg-gray" id="Work">
-        <div class="inner-fit philosophy-image top center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-3 font-blue">
-                        <h1>Other Work</h1>
+                    <div class="col-md-6 col-xs-12 font-green left">
+                        <h1 class="headline">process</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
                             </div>
                         <div class="outer-line-bottom">  
-                        </div> 
-                        <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
+                        </div>  
                     </div>
                 </div>
-                <div class="row padded-top">
-                    <div class="col-md-12 text-right">
-                        <a href="loungechair.html"><div class="work-image2">
-                        </div></a>
-                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
-                        </div>
-                        <div class="pad-space">
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/shoepage14.jpg">
+                    </div>    
+                    
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/shoepage8.jpg">
+                    </div>  
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/shoepage10.jpg">
                     </div>
-                </div>  
-                <div class="row padded-top">
-                    <div class="col-md-12 text-right">
-                        <a href="speaker.html"><div class="work-image3">
-                        </div></a>
-                        <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
-                        </div>
-                        <div class="pad-space">
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/shoepage7.jpg">
+                    </div>
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/shoepage15.jpg">
+                    </div>
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/shoepage11.jpg">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <img class="img-responsive" src="img/shoepage9.jpg">
                     </div>
                 </div>           
             </div>
         </div>
     </div>
 
-    <!-- Contact -->
-    <div class="outer-fit bg-blue" id="Contact">
-        <div class="inner-fit-contact philosophy-image top center">
+<!-- Reflection -->
+    <div class="outer-fit bg-blue" id="Philosophy">
+        <div class="inner-fit-reflection philosophy-image top center">
             <div class="container">
-                <div class="row padded-bottom">
-                    <div class="col-md-6 col-md-offset-3 font-white">
-                        <h1>Contact</h1>
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3 col-sm-offset-3 col-sm-6 font-white left">
+                        <h2 class="font-white">I really love leather shoes. As they wear, they become even more beautiful. I also love the pairing of a natural material with a bright color and the detail of white stitching.</h2>
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>  
+
+<!-- Work -->
+    <div class="outer-fit bg-white" id="Work">
+        <div class="inner-fit philosophy-image top center">
+            <div class="container">
+                <div class="row padded-bottom-25">
+                    <div class="col-md-6 font-green left">
+                        <h1>other work</h1>
                         <div class="outer-line-top">  
                         </div>  
-                            <div class="inner-line-dark">
+                            <div class="inner-line">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h3>I love what I do. If you love it too send me a note or give me a call. Feedback and questions are also much appreciated.</h3></span>
+                        <span class="font-blue font-bold"><h2>A collection of recent projects from school and work.</h2></span>
                     </div>
                 </div>
-                <!-- <form role="form">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input class="form-control" id="name" type="text" placeholder="Full Name">
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="guitarcase.html"><img class="img-responsive" src="img/guitarcasehome.jpg"></a>
+                        <input type="button" value="guitar case | 2012" class="btn btn-blue-work" onclick="location.href='guitarcase.html';">
                         </div>
+                        <div class="pad-space">
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input class="form-control" id="email" type="email" placeholder="Email">
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="loungechair.html"><img class="img-responsive" src="img/chairpagehome.jpg"></a>
+                        <input type="button" value="lounge chair | 2013" class="btn btn-blue-work" onclick="location.href='loungechair.html';">
                         </div>
+                        <div class="pad-space">
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <textarea rows="10"class="form-control"
-                            placeholder="Message" id="message"></textarea>
+                </div>
+                <div class="row padded-bottom-35">
+                    <div class="col-md-12 text-right">
+                        <a href="bootcamp.html"><img class="img-responsive" src="img/cliffordhome.jpg"></a>
+                        <input type="button" value="clifford | 2013" class="btn btn-blue-work" onclick="location.href='bootcamp.html';">
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <button type="submit" name="submit" class="btn btn-new">Send</button>
-                        </div>
-                    </div>
-                </form> -->
-                <div class="row">
-                    <div class="col-md-offset-4 col-md-4">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                        <img class="img-circle" src="http://placehold.it/75x75">
-                    </div>
-                </div>       
-            </div>
-            <div class="container">    
-                <div class="row bottom">
-                    <div class="col-md-12 font-gray right">
-                        <p>&copy Brandon Williams 2014</p>
+                        <div class="pad-space">
                     </div> 
-                </div>
-            </div>    
+                </div>   
+                <div class="row">
+                    <div class="col-md-12 text-right">
+                        <a href="speaker.html"><img class="img-responsive" src="img/speakerpagehome.jpg"></a>
+                        <input type="button" value="speaker | 2013" class="btn btn-blue-work" onclick="location.href='speaker.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div>
+                </div>           
+            </div>
         </div>
-    </div> 
+    </div>    
+
+<!-- Contact -->
+    <div class="outer-full-page bg-green" id="Contact">
+        <div class="inner-full-page middle center">
+            <div class="container">
+                <div class="row padded-bottom">
+                    <div class="col-md-6 col-md-offset-3 font-white left">
+                        <h1 class="headline">contact</h1>
+                        <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line-blue">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div> 
+                        <span class="font-white"><h2>I love what I do. If you love any of it, feel free to send me an email or give me a call to learn more about me or any of my projects.</h2></span>
+                    </div>
+                </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                <form id="form1" name="form1" class="wufoo topLabel page" accept-charset="UTF-8" autocomplete="off" enctype="multipart/form-data" method="post" novalidate action="https://brandonkwilliams.wufoo.com/forms/zv5ugmr1asipbp/#public">
+                <ul>
+                    <li id="foli211" class="notranslate namebox">
+                        <label class="desc" id="title211" for="Field211">
+                        </label>
+                            <div>
+                                <input id="Field211" name="Field211" type="text" class="field text large" placeholder="Name" maxlength="255" tabindex="1" onkeyup="" />
+                            </div>
+                    </li>
+                    <li id="foli208" class="notranslate emailbox">
+                        <label class="desc" id="title208" for="Field208">
+                        </label>
+                        <div>
+                            <input id="Field208" name="Field208" type="email" spellcheck="false" class="field text large" placeholder="Email" maxlength="255" tabindex="2" /> 
+                        </div>
+                    </li>
+                    <li id="foli3" 
+                    class="notranslate messagebox">
+                        <label class="desc" id="title3" for="Field3">
+                        </label>
+                        <div>
+                            <textarea id="Field3" name="Field3" class="field textarea medium" spellcheck="true" rows="10" cols="50" tabindex="3" onkeyup="" placeholder="Message"></textarea>
+                        </div>
+                    </li> 
+                    <li class="buttons ">
+                        <div>
+                            <input id="saveForm" name="saveForm" class="btn btn-blue submit" type="submit" value="Submit"/>
+                        </div>
+                    </li>
+                </ul>
+                </form> 
+        </div> 
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
+                    </div>
+                </div>
+            </div>   
+        </div>
+    </div>   
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
