--- a/bootcamp.html
+++ b/bootcamp.html
@@ -70,7 +70,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <h2 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. A three-week project based on the prompt "Kinetic Art" and a $100 budget. The first project completed for Northwestern University's Engineering Design Innovation Master's Program.</h2>
+                        <h2 class="font-white">Clifford is an Arduino-controlled, guitar-playing machine. A three-week project based on the prompt "Kinetic Art" and a $100 budget. It was my first project completed for Northwestern University's Engineering Design Innovation Master's Program.</h2>
                     </div>
                 </div>  
             </div>
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 col-sm-offset-3 col-sm-6 font-white left">
-                        <h2 class="font-white">Clifford was a lot of fun to work on. I was able to build it out of recycled materials. All of the parts were leftovers in the studio. I originally planned on Clifford having the ability to play six chords, but ended with it only playing two. Clifford has been retired but the project could be pursued again in the future.</h2>
+                        <h2 class="font-white">Clifford was a lot of fun to work on. I was able to build it out of mainly recycled materials. Almost all of the parts were leftovers from the studio. I originally planned on Clifford having the ability to play six chords, but ended with it only playing two. Clifford has since been retired.</h2>
                     </div>
                 </div>  
             </div>
