--- a/guitarcase.html
+++ b/guitarcase.html
@@ -62,7 +62,7 @@
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3 font-white left">
+                    <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2 font-white left">
                         <h1 class="headline">guitar case <span class="font-green">|</span> 2012</h1>
                          <div class="outer-line-top">  
                         </div>  
@@ -70,7 +70,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h2 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings. The design incorporates an innovative recessed handle.</h2>
+                        <h2 class="font-white">I designed this acoustic guitar case with All-State Industries for Gibson USA. I led the process from ideation through full-size final protoype formings. The design incorporates an innovative recessed handle and is currently on hold.</h2>
                     </div>
                 </div>  
             </div>
@@ -155,7 +155,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 col-sm-offset-2 col-sm-8 font-white left">
-                        <h2 class="font-white">The design of this guitar case was an incredible learning experience. I was given a great deal of responsibility and there were some mistakes made along the way. The project is currently on hold.</h2>
+                        <h2 class="font-white">The design of this guitar case was an incredible learning experience. I was given a great deal of responsibility and was able to produce a manufacturable product. The full-scale prototypes turned out great and were incredible to be a part of.</h2>
                     </div>
                 </div>  
             </div>
