--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-white"><h2>Design must be functional, beautiful and manufacturable.</h2>
+                        <span class="font-white"><h2>I believe that good design is functional, beautiful, and manufacturable.</h2>
                         </span>
                     </div>
                 </div>  
@@ -412,7 +412,7 @@
                     </li>
                 </ul>
                 </form> 
-        </div> 
+                </div> 
                 <div class="row">
                     <div class="col-md-12">
                         <h2><span class="font-blue">email. brandonwilliams.nu@gmail.com<br>phone. 574-305-1468</span></h2>
