--- a/loungechair.html
+++ b/loungechair.html
@@ -70,7 +70,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <h2 class="font-white">I have always loved furniture and had the opportunity to design a lounge chair as part of the Introduction to Industrial Design Methods course at Northwestern. I enjoyed taking my design through several steps of my process: sketching, scale models, solid modeling, and a full size proportion model.</h2>
+                        <h2 class="font-white">I have always loved furniture and had the opportunity to design a lounge chair as part of the Introduction to Industrial Design Methods course at Northwestern. I enjoyed taking my design through several steps of my process: sketching, scale models, solid modeling, and a full size proportion model. I was inspired by the beautiful bent wood design of the Eames Chair.</h2>
                     </div>
                 </div>  
             </div>
@@ -169,7 +169,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-8 font-white left">
-                        <h2 class="font-white">The chair that came out of this project is something that I'm very proud of. The proportions of the final full-size scale prototype, however, were still incorrect. I am currently pursuing redesign of the chair's proportions and looking into alternate modes of manufacturing.</h2>
+                        <h2 class="font-white">The chair that came out of this project is something that I'm very excited about. I am currently pursuing redesign of the chair's proportions and looking into alternate modes of manufacturing so that I can explore the possibility of actually realizing the design.</h2>
                     </div>
                 </div>  
             </div>
