--- a/shoes.html
+++ b/shoes.html
@@ -62,7 +62,7 @@
         <div class="inner-fit-project philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-sm-6 col-md-offset-3 col-sm-offset-3 font-white left">
+                    <div class="col-md-8 col-sm-8 col-md-offset-2 col-sm-offset-2 font-white left">
                         <h1 class="headline">shoes <span class="font-green">|</span> 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
@@ -70,7 +70,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div>   
-                        <h2 class="font-white">Shoes that I designed as part of the Introduction to Industrial Design Course at Northwestern. I was inspired by the Cole Haan Lunargrand shoes that combine a dress shoe upper with an athletic sole.</h2>
+                        <h2 class="font-white">These are shoes that I designed as part of the Introduction to Industrial Design Course at Northwestern. I was inspired by the Cole Haan Lunargrand shoes that combine a dress shoe upper with an athletic sole.</h2>
                     </div>
                 </div>  
             </div>
@@ -137,7 +137,7 @@
         <div class="inner-fit-reflection philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 col-sm-offset-3 col-sm-6 font-white left">
+                    <div class="col-md-8 col-md-offset-2 col-sm-offset-2 col-sm-8 font-white left">
                         <h2 class="font-white">I really love leather shoes. As they wear, they become even more beautiful. I also love the pairing of a natural material with a bright color and the detail of white stitching.</h2>
                     </div>
                 </div>  
